# seraph-suite

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
configs/: agents.yaml  cwe_categories.yaml  mitre_attack.yaml  tools.yaml
dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/api/: client.ts  types.ts
dashboard/src/hooks/: useBenchmarks.ts  useEngagements.ts  useKnowledge.ts  useLearning.ts  useMachines.ts
dashboard/src/pages/: BenchmarkDetailPage.tsx  BenchmarksPage.tsx  DashboardPage.tsx  KnowledgePage.tsx  LearningPage.tsx  MachinesPage.tsx  WriteupSubmitPage.tsx
dashboard/src/test/: setup.ts
docs/: AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  DASHBOARD.md  KNOWLEDGE_BASE.md  SANDBOX.md
src/cli/: __init__.py  bench.py  ingest.py
src/seraph/: __init__.py  config.py  exceptions.py  worker.py
src/seraph/agents/: __init__.py  base_agent.py  ctf.py  exploit.py  graph_builder.py  llm_client.py  memorist.py  orchestrator.py  privesc.py  recon.py  state.py
src/seraph/api/: __init__.py  app.py  deps.py  middleware.py  schemas.py  ws.py
src/seraph/benchmarks/: __init__.py  loader.py  metrics.py  models.py  report.py  runner.py
src/seraph/cli/: bench.py  ingest.py  logging_setup.py  main.py  renderer.py  repl.py  setup.py
src/seraph/ingestion/: __init__.py  chunker.py  ctftime.py  exploitdb.py  (+7 more)
tests/: conftest.py
tests/benchmarks/: conftest.py  machines.yaml  test_htb_live.py
tests/integration/: conftest.py  test_agent_graph.py  test_graphrag_integration.py  test_ingestion_integration.py  test_mitre_integration.py  test_vectorstore_integration.py
tests/unit/: test_base_agent.py  test_chunker.py  test_ctf_agent.py  test_ctftime_scraper.py  test_embeddings.py  test_entity_extractor.py  test_exceptions.py  test_exploit_agent.py  test_exploitdb.py  test_feedback_db.py  test_graph_builder.py  test_graph_retriever.py  test_graphstore.py  test_hard_negative_miner.py  test_ingestion_models.py  test_ingestion_state.py  test_llm_client.py  test_lora_finetuner.py  test_memorist_agent.py  test_mitre_ingestor.py  test_mitre_parser.py  test_nvd.py  test_orchestrator.py  test_privesc_agent.py  test_query_projection.py  test_recon_agent.py  test_reranker.py  test_retriever.py  test_state.py  test_tool_registry.py  test_tool_wrappers.py  test_vectorstore.py  test_writeup_ingestor.py
(+99 files in other folders)
