[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seraph-suite"
version = "1.0.8"
description = "Open-source, local-first AI pentesting agent platform with self-learning capabilities"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Maciej" },
]
keywords = ["pentesting", "ai", "security", "ctf", "langgraph", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "langgraph>=0.2",
    "qdrant-client[fastembed]>=1.9",
    "neo4j>=5.18",
    "anthropic>=0.26",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.2",
    "sentence-transformers>=3.0",
    "einops>=0.7",
    "python-frontmatter>=1.1",
    "celery[redis]>=5.4",
    "httpx>=0.27",
    "click>=8.1",
    "setfit>=1.1",
    "fastembed>=0.3",
    "aiosqlite>=0.20",
    "jinja2>=3.1",
    "peft>=0.11",
    "datasets>=2.19",
    "aiodocker>=0.22",
    "python-multipart>=0.0.22",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/Unohana/seraph-suite"
Repository = "https://github.com/Unohana/seraph-suite"
Issues = "https://github.com/Unohana/seraph-suite/issues"

[project.scripts]
seraph = "seraph.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/seraph"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "RUF"]
ignore = ["B008", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["seraph"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
